css alignment fixed

--- a/css/thme.css
+++ b/css/thme.css
@@ -2,4 +2,4 @@
 h2 { font-size: 1.2em !important; clear: both; }
 .markdown ul { padding: 0 2.4em; }
 .markdown li { list-style-position: outside !important; }
-a[href$=".pdf"] { float:right; }
+a[href*="://localhost:"][href$=".pdf"], a[href*="://thomasheler."][href$=".pdf"] { float:right; }
